src/test/deca/context/invalid/ifThenElse/invalid_condition_if.deca
// Description:
//    Test invalid condition type in if-then-else.
//    Test rule 3.35
//
// [Begin Result]
//invalid_condition_if.deca:14:8: Condition must be of type boolean. Rule 3.29.
// [End Result]
//
// History:
//    créé le 08/01/2025

{
    int x = 10;
    if (x) {
        print("Condition non booléenne");
    } else {
        print("Condition toujours non booléenne");
    }
}
